assets/sass/cids-theme/styles/header.sass
header#document-header
    nav
        @include media-breakpoint-up(desktop)
            .container
                align-items: baseline
            + nav 
                border-bottom: 1px solid $header-color
                padding-top: 0
        &.websites-navigation
            @include meta
            padding-bottom: 0
            ul
                @include list-reset
            .container > ul
                display: flex
                justify-content: flex-end
                margin-left: auto
                > li
                    > a,
                    &.header-i18n span
                        border-radius: pxToRem(20)
                        padding: space() $spacing-2
                        text-decoration: none
                        @include media-breakpoint-up(desktop)
                            padding: space() space(4)
                            border-radius: pxToRem(30)
                    > a
                        &:not(.external-site)
                            background: $header-color
                            color: $header-background
                        &.external-site
                            background: rgba($header-color, 0.2) // --color accent
                            color: $header-color
                            &::after
                                display: none
                    &:first-of-type
                        > a.external-site
                            border-bottom-right-radius: 0
                            border-top-right-radius: 0
                            margin-right: -$spacing-2
                            padding-right: space(7)
                        > a:not(.external-site)
                            margin-left: -$spacing-2
                    &:nth-child(2)
                        > a.external-site
                            border-bottom-left-radius: 0
                            border-top-left-radius: 0
                            margin-left: -$spacing-2
                            padding-left: space(6)
                    &.header-i18n
                        margin-left: $spacing-2
                        position: relative
                        span
                            @include icon(arrow-down-s-line, after)
                                display: inline-block
                                margin-left: space()
                                margin-right: -(space())
                                transition: transform 0.15s
                            border: 1px solid $header-color
                            cursor: pointer
                            text-transform: uppercase
                            &[aria-expanded="true"]::after
                                transform: rotate(180deg)
                        .dropdown-menu
                            background: $header-color
                            border-radius: space(2)
                            box-shadow: 0px 4px 4px 0px #00000040
                            margin-top: $spacing-2
                            padding: $spacing-1 $spacing-2
                            position: absolute
                            right: 0
                            a
                                color: $header-background
        @include media-breakpoint-up(desktop)
            .menu
                min-width: columns(6)
                .nav-level-1
                    justify-content: space-between
                    li
                        span,
                        a
                            @include signature
                            &:first-of-type
                                padding-left: 0
            .dropdown-menu.is-titled
                .dropdown-menu
                    &-title
                        @include h3
                        @include link($header-color)
                        text-decoration-color: $header-color
                        text-underline-offset: pxToRem(10)
                        margin-bottom: $spacing-3
                    &-lead
                        @include lead-hero
                        font-size: $lead-hero-size
                        line-height: $lead-hero-line-height
                .dropdown-heading
                    margin-right: offset(1)
                    width: columns(5)
                .nav-level-2
                    padding-top: $spacing-4
                    width: columns(6)

